force-app/main/default/objects/BudgetItem__c/BudgetItem__c.object-meta.xml
<CustomObject>
    <label>Budget Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>