force-app/main/default/objects/BudgetItem__c/fields/PerMonth__c.field-meta.xml
<CustomField>
    <fullName>PerMonth__c</fullName>
    <formula>Amount__c / Interval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>