force-app/main/default/objects/BudgetItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PaymentFrequency__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>PerMonth__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>